--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,13 @@
             <artifactId>jquery</artifactId>
             <version>2.1.4</version>
         </dependency>
-       
+
+        <dependency>
+        	<groupId>org.codehaus.sonar</groupId>
+        	<artifactId>sonar-maven-plugin</artifactId>
+        	<version>5.1-RC2</version>
+        	<type>maven-plugin</type>
+        </dependency>
     </dependencies>
 
     <build>
